# ml_basics

./: .gitignore  pyproject.toml
neural_networks_using_micrograd/: README.md
notebooks/: Bayesian_Neural_Network.ipynb  Conditional_Independence_and_Naive_Bayes.ipynb  Gaussian_Process_Inference_Example.ipynb  Gaussian_Process_Prior.ipynb  Kernel_Ridge_Regression.ipynb  Kernel_functions.ipynb  Probabilistic_BNN.ipynb  RVM.ipynb  SVM.ipynb
notes/: Conditional_Independence.md
